################################################################################
Jadecy 2.1.0, 2023/04/10

- Upgraded supported class file format from 52 (Java 8) to 64 (Java 20)
  (previous version would throw when stumbling upon new constant pool flags,
  such as Java 9's module).
  Can now parse class dependencies from modules (just the module main class,
  not dependencies between modules),
  and dependencies from records (for which we parse the new record attribute,
  although it seems that proper record dependencies could already be computed
  from previously parsed structures).
  PermittedSubclasses are not considered a dependency
  (that would cause cycles in good code).

################################################################################
Jadecy 2.0.1, 2020/07/28

- Corrected an issue in JavacHelper, which was always using ';' as
  classpath separator, instead of ':' by default and ';' only on Windows.

- Upgraded javadoc and tests for byte size computations.

################################################################################
Jadecy 2.0, 2019/04/28

- Corrected bug in DepUnit, where checkDeps(...) method would ignore
  dependencies to elements (classes or packages) contained within
  begin elements set ("mustIncludeDepsToBeginSet" was false instead of true).

- Moved name utilities in the new net.jadecy.names package.

- In net.jadecy.comp package, use of JavaCompiler and JarOutputStream instead
  of javac and jar executables, and API rework/cleanup.
  As a result, JavacHelper class now requires Java 6+.

- Aligned src/build code on Jafama 2.3.1 src/build
  (for homogeneity, and for https://github.com/jeffhain/jafama/issues/4).
  The main builds the jar with JavaCompiler and JarOutputStream (was previously
  built using JDK5 javac and jar executables).
  Also now compiled with "-g:vars" option, for proper arguments names instead
  of arg0, arg1, etc., and the manifest contains the implementation version.
